# liteskill

./: .dialyzer_ignore.exs  .dockerignore  .doctor.exs  .gitignore  .sobelow-conf  CLAUDE.md  coveralls.json  docker-compose.yml  mise.toml  mix.exs
.github/workflows/: desktop.yml  elixir.yml
assets/css/: app.css
assets/js/: app.js
config/: config.exs  dev.exs  runtime.exs  test.exs
deploy/argocd/: application.yaml
docs/: book.toml
docs/src/: SUMMARY.md  introduction.md  so-whats-the-difference.md
helm/liteskill/: Chart.yaml  values.yaml
lib/: liteskill_web.ex
lib/liteskill/: accounts.ex  acp.ex  agents.ex  application.ex  chat.ex  data_sources.ex  defaults.ex  demo_seeds.ex  desktop.ex  llm.ex  llm_models.ex  map_utils.ex  mcp_servers.ex  memories.ex  rag.ex  repo.ex  reports.ex  retry.ex  runs.ex  schedules.ex  settings.ex  single_user.ex  teams.ex  usage.ex
lib/liteskill_web/: endpoint.ex  markdown.ex  router.ex
scripts/: Dockerfile.desktop-build  build-desktop.sh  build-tauri-windows.sh  fetch-postgres.sh  patch-windows-nifs.sh  setup-erlang-elixir.sh  test-with-docker.sh  verify-windows-nifs.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
test/: test_helper.exs
test/e2e/: acp_test.exs  chat_test.exs  login_test.exs  mcp_server_test.exs  navigation_test.exs  notation_test.exs  profile_test.exs  registration_test.exs  setup_wizard_test.exs
test/liteskill/: accounts_test.exs  acp_test.exs  agents_test.exs  application_test.exs  chat_test.exs  data_sources_test.exs  defaults_test.exs  desktop_test.exs  groups_test.exs  mcp_servers_test.exs  memories_test.exs  rag_test.exs  release_test.exs  reports_test.exs  retry_test.exs  runs_test.exs  (+5 more)
(+195 files in other folders)
